# dependabot_demo

.github/: dependabot.yml
libs/lib10/: pyproject.toml
libs/lib11/: pyproject.toml
libs/lib2/: pyproject.toml
libs/lib3/: pyproject.toml
libs/lib4/: pyproject.toml
libs/lib5/: pyproject.toml
libs/lib6/: pyproject.toml
libs/lib7/: pyproject.toml
python/: .python-version  pyproject.toml
